# Scafforge

./: .gitignore  AGENTS.md  IMPLEMENTATION-HANDOFF.md  README.md  REVIEW-NOTES.md  USERGUIDE.md  architecture.md  package.json  scafforge-context.json  scafforge-remediation-gap-closure-plan.md  scafforge-remediation-progress-review.md
.scafforge-audit/: commit.txt
Tasks/: SCAFFORGE-PLAN-REVIEW-REPORT.md  SCAFFORGE-REMEDIATION-PLAN.md  minimaxtesting.md  scafforgecoreskills.md
active-logs/: ANALYSIS.md  mcode2log.md
active-plans/: 00-PLAN-INDEX.md  01-defect-register.md  02-implementation-plan.md  03-export-presets-decision.md  04-prevention-strategy.md  05-verification-suite.md  08-cross-stack-generalization.md  09-acceptance-gates.md  FULL-REPORT.md  README.md  WORK-JOURNAL.md  blocker-register.md  codexinstructions.md  codexplan1604.md  docscleanup.md  implementation-log.md  implementation-plan.md  review.md  root-cause-map.md  validation-log.md
adapters/: README.md  manifest.json
references/: authority-adr.md  competence-contract.md  control-plane-client-contract.md  control-plane-operator-workflows.md  documentation-authority-map.md  external-source-evaluation-rubric.md  generated-repo-inventory-contract.md  invariant-catalog.md  one-shot-generation-contract.md  orchestration-wrapper-contract.md  rejected-sources.md  skill-evolution-policy.md  spec-factory-handoff-contract.md  stack-adapter-contract.md  validation-proof-matrix.json  worker-host-contract.md
tools/agent-caller/: README.md  pyproject.toml
tools/agent-caller/src/agent_caller/: cli.py
(+311 files in other folders)
