[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-caller"
version = "0.1.0"
description = "Local wrapper around Copilot CLI and OpenCode for Scafforge plan review, implementation, and PR review workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
agent-caller = "agent_caller.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
